--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "angular-feather": "^6.5.0",
     "ngx-cookie-service": "^16.0.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
