--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "angular-feather": "^6.5.0",
+    "grapesjs": "^0.21.4",
     "ngx-cookie-service": "^16.0.0",
+    "ngx-grapesjs": "^2.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
